--- a/pages/movie.html
+++ b/pages/movie.html
@@ -15,6 +15,8 @@
         <!-- Internal Documents -->
         <link rel="stylesheet" href="../css/main.css">
         <script src="../JS/index.js"></script>
+        <script src="../JS/watchlist.js"></script>
+        <script src="../JS/movie.js"></script>
         
     </head>
     <body>
@@ -88,7 +90,7 @@
                                         
                                     </div>
                                     <button class="btn btn-primary m-3">Watch Now</button>
-                                    <button type="button" class="btn btn-danger m-3">Remove from Watchlist</button>
+                                    <button type="button" class="btn btn-primary m-3">Add to Watchlist</button>
                                 </div>
                             </div>
                         </div>
@@ -100,6 +102,29 @@
 
         </div>
 
-        <footer id="singleMovie-footer"></footer>
+        <footer id="moviesFooter">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <img src="../assets/Logo.jpg" alt="Blockbuster Logo">
+                    <h2>Blockbuster Streaming</h2>
+                </div>
+                <div class="footer-links">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Library</a></li>
+                        <li><a href="#">Watchlist</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="footer-social">
+                    <ul>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Instagram</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
