--- a/pages/watchlist.html
+++ b/pages/watchlist.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blockbuster: Single Movie</title>
+    <title>Blockbuster: Watchlist</title>
     <!-- External Documents -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
@@ -15,6 +15,8 @@
     <!-- Internal Documents -->
     <link rel="stylesheet" href="../css/main.css">
     <script src="../JS/index.js"></script>
+    <script src="../JS/watchlist.js"></script>
+    <script src="../JS/movie.js"></script>
   
   </head>
   <body>
@@ -48,7 +50,7 @@
     <!-------------------------------------------------------------------------------------------------------------------------------------------------->
     <!-- Page Content  -->
       <div class="container mt-5" id="movieContainer">
-        <div class="row">
+        <div class="row" id="moviesRow">
           <div class="col-12 col-md-6 mb-2 mt-5">
               <img src="../assets/Lost ark 3.jpeg" class="card-img watchlist-card-img">
           </div>
@@ -62,59 +64,57 @@
                   <h6 class="card-subtitle mb-2 text-body-secondary pt-3">Run Time: 1h 55min</h6>
                   <p class="card-text">Raiders of the Lost Ark is a 1981 American action-adventure film directed by Steven Spielberg from a screenplay by Lawrence Kasdan, based on a story by George Lucas and Philip Kaufman. Set in 1936, the film stars Harrison Ford as Indiana Jones, a globetrotting archaeologist vying with Nazi German forces to recover the long-lost Ark of the Covenant which is said to make an army invincible. Teaming up with his tough former romantic interest Marion Ravenwood (Karen Allen), Jones races to stop rival archaeologist Dr. René Belloq (Paul Freeman) from guiding the Nazis to the Ark and its power.</p>
                   <a href="../pages/movie.html" class="btn btn-primary">View</a>
-                  <button type="button" class="btn btn-danger m-3">Remove from Watchlist</button>
+                  <button type="button" class="btn-btn-danger m-3">Remove from Watchlist</button>
                 </div>
               </div>
           </div>
         </div>
 
-        <div class="row">
+        <div class="row" id="moviesRow">
           <div class="col-12 col-md-6 mb-2 mt-3">
               <img src="../assets/Titanic.jpeg" class="card-img watchlist-card-img">
           </div>
           <div class="col-12 col-md-6 mt-3">
-              <div class="card">
-                  <div class="card-body">
-                    <h3 class="card-title">Titanic</h3>
-                    <span class="badge rounded-pill text-bg-secondary">Drama</span>
-                    <span class="badge rounded-pill text-bg-secondary">Melodrama</span>
-                    <h6 class="card-subtitle mb-2 text-body-secondary pt-3">Release Date: 1997</h6>
-                    <h6 class="card-subtitle mb-2 text-body-secondary pt-3">Run Time: 3h 14min</h6>
-                    <p class="card-text">Seventeen-year-old Rose hails from an aristocratic family and is set to be married. When she boards the Titanic, she meets Jack Dawson, an artist, and falls in love with him.</p>
-                    <a href="../pages/movie.html" class="btn btn-primary">View</a>
-                    <button type="button" class="btn btn-danger m-3">Remove from Watchlist</button>
-                  </div>
-                </div>
-          </div>
-        </div>
-
-        <!-- Watch List Template -->
-        <template id="movieWatchCardTemplate">
-          <!------------------------------------------------------------------------------------------>
-          <!-- Movie Card List-->
-
-          <div class="row">
-            <div class="col-12 col-md-6 mb-2 mt-3">
-                  <img src="../assets/Return of the jedi.jpeg" class="card-img watchlist-card-img">
-            </div>
-            <div class="col-12 col-md-6 mt-3">
-              <div class="card">
-                <div class="card-body">
-                  <h3 class="card-title" id="movieTitle">Star Wars: Return of the Jedi</h3>
-                  <span class="badge rounded-pill text-bg-secondary" id="movieGenre">Sci-fi</span>
-                  <span class="badge rounded-pill text-bg-secondary" id="movieGenre">Action</span>
-                  <h6 class="card-subtitle mb-2 text-body-secondary pt-3" id="releaseDateText">Release Date: 1983</h6>
-                  <h6 class="card-subtitle mb-2 text-body-secondary pt-3" id="runTime">Run Time: 2h 11min</h6>
-                  <p class="card-text" id="movieCaption">Set one year after The Empire Strikes Back, the Galactic Empire is constructing a second Death Star to exterminate the Rebel Alliance. With intel that the Emperor will be on board, the Rebel fleet launches a full-scale attack on the Death Star in hopes of both destroying it and the Emperor. Meanwhile, Rebel hero Luke Skywalker, now a Jedi Knight, struggles to bring his father, Darth Vader, back to the light side of the Force.</p>
-                  <a href="../pages/movie.html" class="btn btn-primary">View</a>
-                  <button type="button" class="btn btn-danger m-3">Remove from Watchlist</button>
-                </div>
+            <div class="card">
+              <div class="card-body">
+                <h3 class="card-title">Titanic</h3>
+                <span class="badge rounded-pill text-bg-secondary">Drama</span>
+                <span class="badge rounded-pill text-bg-secondary">Melodrama</span>
+                <h6 class="card-subtitle mb-2 text-body-secondary pt-3">Release Date: 1997</h6>
+                <h6 class="card-subtitle mb-2 text-body-secondary pt-3">Run Time: 3h 14min</h6>
+                <p class="card-text">Seventeen-year-old Rose hails from an aristocratic family and is set to be married. When she boards the Titanic, she meets Jack Dawson, an artist, and falls in love with him.</p>
+                <a href="../pages/movie.html" class="btn btn-primary">View</a>
+                <button type="button" class="btn-btn-danger m-3">Remove from Watchlist</button>
               </div>
             </div>
           </div>
-        </template>
+        </div>
+
       </div>
 
-    <footer id="watchlist-footer"></footer>
+      <footer id="moviesFooter">
+        <div class="footer-content">
+            <div class="footer-logo">
+                <img src="../assets/Logo.jpg" alt="Blockbuster Logo">
+                <h2>Blockbuster Streaming</h2>
+            </div>
+            <div class="footer-links">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Library</a></li>
+                    <li><a href="#">Watchlist</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-social">
+                <ul>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+            </div>
+        </div>
+      </footer>
   </body>
 </html>
