--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
                 <li class="nav-item">
                   <a href="pages/watchlist.html"><P class="nav-link">Watchlist</P></a>
                 </li>
+
                 <li class="nav-item">
                   <a href="../sign in.html"><div class="nav-link profile"><img src="../assets/profile.svg" alt="profile svg"></div></a>
                 </li>
                 <li class="nav-item">
-                  <div class="nav-link" href="../sign in.html"><h4 style="color: #E94556;">Log Out</h4></div>
+                  <a href="pages/sign in.html"><P class="nav-link"><h4 style="color: #E94556;">LOG OUT</h4></P></a>
                 </li>
             </ul>
         </div>
